# Agent-Precommit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Claude.md  LICENSE  Makefile  Readme.md  agent-precommit.toml  clippy.toml  package.json  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml  static.yml
benches/: benchmarks.rs
npm/: postinstall.js  run.js
python/agent_precommit/: __init__.py
src/: lib.rs  main.rs
src/checks/: builtin.rs  mod.rs  precommit.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/core/: detector.rs  error.rs  executor.rs  git.rs  mod.rs  runner.rs
src/presets/: mod.rs
tests/: integration_test.rs
web/: index.html
